Details    : Disconnected dentry cannot be found with lookup, so we do not need
	     to unhash it or make it invalid

Bugzilla   : 11757
Description: fix llapi_lov_get_uuids() to allow many OSTs to be returned
Details:   : Change llapi_lov_get_uuids() to read the UUIDs from /proc instead
	     of using an ioctl. This allows lfsck for > 160 OSTs to succeed.

--------------------------------------------------------------------------------

2007-05-03  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0.1
       * bug fixes

Severity   : normal
Frequency  : on some architectures	
Bugzilla   : 12404
Description: 1.6 client sometimes fails to mount from a 1.4 MDT
Details    : Uninitialized flags sometimes cause configuration commands to
	     be skipped.
	
--------------------------------------------------------------------------------

2007-04-19  Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.0
       * CONFIGURATION CHANGE.  This version of Lustre WILL NOT
	 INTEROPERATE with older versions automatically.  In many cases a
	 special upgrade step is needed. Please read the
	 user documentation before upgrading any part of a 1.4.x system.
       * WARNING: Lustre configuration and startup changes are required with
	 this release.  See https://mail.clusterfs.com/wikis/lustre/MountConf
	 for details.
       * Support for kernels:
        2.4.21-47.0.1.EL (RHEL 3)
        2.6.5-7.283 (SLES 9)
        2.6.9-42.0.10.EL (RHEL 4)
        2.6.12.6 vanilla (kernel.org)
        2.6.16.27-0.9 (SLES10)
       * Client support for unpatched kernels:
        (see https://mail.clusterfs.com/wikis/lustre/PatchlessClient)
        2.6.16 - 2.6.19 vanilla (kernel.org)
        2.6.9-42.0.8EL (RHEL 4)
       * Recommended e2fsprogs version: 1.39.cfs6
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel
       * bug fixes

Severity   : enhancement
Bugzilla   : 8007
Description: MountConf